# SpiritTemple

./: .gitignore  .travis.yml  Doxyfile  README.md  build.sh
.github/workflows/: main.yml
Client/: Assembly-CSharp.csproj  Client.sln
Client/Assets/: GridControl.cs  Jar.cs
Client/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
Client/Temp/: Assembly-CSharp.dll.hash  CompilationLog.txt  Unity.2D.Tilemap.Editor.dll.hash  UnityTempFile-00b7759049548437f8c941ab6c6127ac  UnityTempFile-1786c8cc6d8053bd5ab9ccc162ab48b3  UnityTempFile-1e24eb72ce4f40585bf1fc42a9b90ac0  UnityTempFile-22c3dc1564ef08d119885a064d19631d  UnityTempFile-2a8319d01d1e58fd8819f0ab29873274  UnityTempFile-2e96c1f951ce02690b575769242f336c  UnityTempFile-31239a921c2184ebf838e87985d51553  UnityTempFile-3bfbb80dbeb78841b93d840d6259054f  UnityTempFile-3ce47ade42c8d2625a74a62756c27562  UnityTempFile-3fbff487b857a19438a66f75d92886d0  UnityTempFile-402b43e652d74c617b198fe0bdeca765  UnityTempFile-46169b2e73e60e6e5afab5bc31bcd552  UnityTempFile-4d0d1eab7bb18e94fb624612f3b7fcb2  UnityTempFile-570861b6591f0951088865c36f62a852  UnityTempFile-5f5db545d969e7bfb9e2327a059cbb97  UnityTempFile-608fb38913cfadb83a6a4966c57b84a2  UnityTempFile-68f86ac25dd4c91f180e7a2d02d89f08  UnityTempFile-79d21ca34b3fbe8cea916291759073a1  (+18 more)
Documentation/html/: Enemy_8hpp_source.html  (+97 more)
Extra/: clientAction.json  initialData.json  instructionsServer.json
Server/: CMakeLists.txt
Server/src/: Enemy.cpp  Game.cpp  GameObject.cpp  GeneticLab  GeneticLab.cpp  Item.cpp  Level.cpp  MoveGenerator.cpp  Pathfinding.cpp  Server.cpp  main.cpp
Server/src/include/: Direction.hpp  Enemy.hpp  EnemyType.hpp  GOType.hpp  Game.hpp  GameObject.hpp  GeneticLab.hpp  Item.hpp  ItemType.hpp  Level.hpp  MoveGenerator.hpp  Pathfinding.hpp  RouteType.hpp  Server.hpp  list.hpp  utilities.hpp
(+2002 files in other folders)
